# bootloader

./: .gitignore  CMakeLists.txt  README.md  Toolchain.cmake  boot.cfg  build.sh  clean.sh  exit.sh  fullbuild.sh  gen.sh  kernel  run.sh
include/bootloader/: bootcontext.h  bootinfo.h  bootloadercfg.h.in  config.h  console.h  elf.h  elfloader.h  filesystem.h  graphics.h  kerneljump.h  memory.h  memorymap.h  memset.h  paging.h  print.h  string.h  version.h.in
src/: config.c  console.c  elfloader.c  filesystem.c  graphics.c  kerneljump.c  kerneljump.s  main.c  memory.c  memorymap.c  memset.c  paging.c  string.c
src/print/: print.c
